# OONet Library
lib_LIBRARIES = libSlib.a

libSlib_a_includedir=$(includedir)/oonet

# Source files
libSlib_a_SOURCES = Base64.cpp HostInet.cpp InetServer.cpp Socket.cpp \
BinaryData.cpp HostResolver.cpp SemaphorePosix.cpp StringConverter.cpp \
Buffer.cpp InetClient.cpp MutexPosix.cpp SocketAddress.cpp Thread.cpp \
Exception.cpp InetPeer.cpp PortInet.cpp SocketAddressInet.cpp ThreadPosix.cpp

# Header files
libSlib_a_include_HEADERS = \
	Base64.h \
	HostInet.h \
	MultiReference.h \
	Slib.h \
	Thread.h \
	BinaryData.h \
	HostResolver.h \
	Mutex.h \
	SocketAddress.h \
	Buffer.h \
	InetClient.h \
	platform.h \
	SocketAddressInet.h \
	config.h \
	InetPeer.h \
	PortInet.h \
	Socket.h \
	Exception.h \
	InetServer.h \
	Semaphore.h \
	StringConverter.h

