# OONet Library
lib_LIBRARIES = liboonet.a

liboonet_a_includedir=$(includedir)/oonet
liboonet_a_http_includedir=$(includedir)/oonet/Http

# Source files
liboonet_a_SOURCES = Base64.cpp \
	HostInet.cpp \
	InetServer.cpp \
	Socket.cpp \
	BinaryData.cpp \
	HostResolver.cpp \
	SemaphorePosix.cpp \
	StringConverter.cpp \
	Buffer.cpp \
	InetClient.cpp \
	MutexPosix.cpp \
	SocketAddress.cpp \
	Thread.cpp \
	Exception.cpp \
	InetPeer.cpp \
	PortInet.cpp \
	SocketAddressInet.cpp \
	ThreadPosix.cpp \
	Http/Client.cpp \
	Http/Headers.cpp \
	Http/Request.cpp \
	Http/Server.cpp \
	Http/ClientHandler.cpp \
	Http/Packet.cpp \
	Http/Response.cpp \
	Http/Url.cpp
	
# Header files
liboonet_a_include_HEADERS = \
	Base64.h \
	HostInet.h \
	MultiReference.h \
	OONet.h \
	Thread.h \
	BinaryData.h \
	HostResolver.h \
	Mutex.h \
	SocketAddress.h \
	Buffer.h \
	InetClient.h \
	SocketAddressInet.h \
	InetPeer.h \
	PortInet.h \
	Socket.h \
	Exception.h \
	InetServer.h \
	Semaphore.h \
	StringConverter.h

liboonet_a_http_include_HEADERS = \
	Http/ClientHandler.h \
	Http/Url.h \
	Http/Packet.h \
	Http/Response.h \
	Http/Client.h \
	Http/Headers.h \
	Http/Request.h \
	Http/Server.h
