# Compile options
LDADD = ../liboonet/liboonet.a -lpthread
AM_CPPFLAGS = -I$(srcdir)/../liboonet

# OONet Test suite
check_PROGRAMS = oonet-tests

# Source files
oonet_tests_SOURCES = main.cpp \
	Test.cpp \
	TestHTTPClient.h \
	TestHTTPResponse.h \
	TestMutex.h \
	TestSocket.h \
	TestEssentials.h \
	TestHTTPHeaders.cpp \
	TestHTTPServer.cpp \
	TestPortInet.cpp \
	TestStringConverter.cpp \
	SubTest.cpp \
	Test.h \
	TestHTTPHeaders.h \
	TestHTTPServer.h \
	TestPortInet.h \
	TestStringConverter.h \
	SubTest.h \
	TestHostInet.cpp \
	TestHTTPPacket.cpp \
	TestInetClient.cpp \
	TestSemaphore.cpp \
	TestThread.cpp \
	TestBinaryData.cpp \
	TestHostInet.h \
	TestHTTPPacket.h \
	TestInetClient.h \
	TestSemaphore.h \
	TestThread.h \
	TestBinaryData.h \
	TestHostResolver.cpp \
	TestHTTPRequest.cpp \
	TestInetServer.cpp \
	TestSocketAddressInet.cpp \
	TestUrl.cpp
	TestBuffer.cpp \
	TestHostResolver.h \
	TestHTTPRequest.h \
	TestInetServer.h \
	TestSocketAddressInet.h \
	TestUrl.h \
	TestBuffer.h \
	TestHTTPClient.cpp \
	TestHTTPResponse.cpp \
	TestMutex.cpp \
	TestSocket.cpp

