# OONet Library
lib_LIBRARIES = liboonet.a

liboonet_a_includedir=$(includedir)/oonet
liboonet_a_http_includedir=$(includedir)/oonet/http

# Source files
liboonet_a_SOURCES = \
	oonet.cpp \
	base64.cpp \
	binary_data.cpp \
	buffer.cpp \
	exception.cpp \
	host_inet.cpp \
	host_resolver.cpp \
	mutex_impl_posix.cpp \
	netstream.cpp \
	netstream_threaded.cpp \
	port_inet.cpp \
	semaphore_impl_posix.cpp \
	socket_address.cpp \
	socket_address_inet.cpp \
	socket.cpp \
	socket_impl_posix.cpp \
	string_converter.cpp \
	thread.cpp \
	thread_impl_posix.cpp \
	http/client.cpp \
	http/headers_list.cpp \
	http/message.cpp \
	http/request.cpp \
	http/response.cpp \
	http/server_clienthandler.cpp \
	http/server.cpp \
	http/url.cpp

# Header files
liboonet_a_include_HEADERS = \
	string_converter.h \
	base64.hpp \
	binary_data.hpp \
	buffer.hpp \
	exception.hpp \
	host_inet.hpp \
	host_resolver.hpp \
	mutex.hpp \
	netserver.hpp \
	netstream.hpp \
	netstream_threaded.hpp \
	oonet.hpp \
	port_inet.hpp \
	scoped_lock.hpp \
	semaphore.hpp \
	socket_address.hpp \
	socket_address_inet.hpp \
	socket.hpp \
	thread.hpp

# Header files of http
liboonet_a_http_include_HEADERS = \
	http/client.hpp \
	http/headers_list.hpp \
	http/message.hpp \
	http/request.hpp \
	http/response.hpp \
	http/server_clienthandler.hpp \
	http/server.hpp \
	http/url.hpp

